# edgesam-dyt

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
edge_sam/: build_sam.py  config.py  predictor.py
edge_sam/modeling/: __init__.py  common.py  mask_decoder.py  mask_decoder_hq.py  prompt_encoder.py  rep_vit.py  sam.py  transformer.py
edge_sam/onnx/: predictor_onnx.py
edge_sam/utils/: coreml.py
evaluation/: eval_mIoU.py
notebooks/: demo_hq.py  predictor_example.ipynb  predictor_example_hq.ipynb  predictor_example_onnx.ipynb  predictor_example_onnx_compare.ipynb
scripts/: download_data_and_run_distillation.sh  eval_mIoU2.sh  export_onnx_model.py  extract_weights.py  install_mmcv.sh
training/: sa_train_subset.txt  sa_val_subset.txt  save_embedding.py  train.py  train_hq.py  utils.py
training/configs/: rep_vit_m1_dyt_fuse_enc_dec_4m_ft_bp_iter2b_sa_distill.yaml  rep_vit_m1_dyt_fuse_enc_dec_4m_ft_bp_iter2b_sa_distill_frozen_mask.yaml  rep_vit_m1_dyt_fuse_enc_dec_4m_ft_bp_iter2b_sa_distill_joint.yaml  rep_vit_m1_dyt_fuse_sa_distill.yaml  rep_vit_m1_dyt_hq_fuse_enc_dec.yaml  rep_vit_m1_fuse_enc_dec_4m_ft_bp_iter2b_sa_distill.yaml  rep_vit_m1_fuse_sa_distill.yaml
training/hq_utils/: dataloader.py  loss_mask.py  misc.py
web_demo/: gradio_app.py
