[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coremltools>=8.3.0",
    "fastapi>=0.116.1",
    "gdown>=5.2.0",
    "gradio>=5.40.0",
    "kornia>=0.8.1",
    "loralib>=0.1.2",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "opencv-python>=4.12.0.88",
    "pycocotools>=2.0.10",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.21.0",
    "yacs>=0.1.8",
]
